criado o babel e configurado

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-native": "0.81.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@react-native/babel-preset": "^0.82.1",
     "@types/react": "~19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.9.2"
   },
   "private": true
